// SPDX-FileCopyrightText: 2025-2026 João V. Farias (beyondmagic) <beyondmagic@mail.ru>
// SPDX-License-Identifier: AGPL-3.0-or-later
//
// This file is generated from:
// - "source/database/query/create/create/tables.js"
// - "source/database/query/create/create/types.js"
//
// This should not be edited directly.

// ------------------------------------------------------------------------
// Types (from source/database/query/create/types.js)
// ------------------------------------------------------------------------

Enum "TYPE_DOMAIN" {
  "ROUTER"
  "SUBDOMAIN"
}

Enum "TYPE_SUBJECT_STATUS" {
  "PUBLIC"
  "PRIVATE"
  "ARCHIVED"
  "DELETED"
}

// ------------------------------------------------------------------------
// Table Groups
// ------------------------------------------------------------------------

TableGroup "domain" {
  domain
  content
  content_link
  domain_tag
}

TableGroup "asset" {
  asset
  asset_information
}

TableGroup "language" {
  language
  language_information
}

TableGroup "tag" {
  tag
  tag_requirement
  tag_information
}

TableGroup "author" {
  author
  author_connection
  author_refresh_connection
  author_domain
  author_content
}

TableGroup "garden" {
  garden
  garden_information
}

TableGroup "module" {
  module
}

// ------------------------------------------------------------------------
// Area: Domain
// ------------------------------------------------------------------------

Table "domain" {
  "id" serial [pk, not null, increment]
  "id_domain_parent" integer [ref: < "domain"."id"]
  "id_domain_redirect" integer [ref: < "domain"."id"]
  "kind" TYPE_DOMAIN [not null]
  "slug" varchar(32)
  "status" TYPE_SUBJECT_STATUS [not null]

  Indexes {
    (slug, kind, id_domain_parent) [unique, name: "domain_unique_slug_kind_parent"]
    ((1)) [unique, name: "domain_single_root", note: "Partial index where id_domain_parent IS NULL AND slug IS NULL."]
  }
}

Table "content" {
  "id" serial [pk, not null, increment]
  "id_domain" integer [not null, ref: < "domain"."id"]
  "id_language" integer [not null, ref: < "language"."id"]
  "status" TYPE_SUBJECT_STATUS [not null]
  "title" varchar(512) [not null]
  "title_sub" varchar(512) [not null]
  "synopsis" varchar(512) [not null]
  "body" text [not null]
  "requests" integer [not null]
  "created_at" timestamp [not null]
  "updated_at" timestamp [not null]

  Indexes {
    (id_domain, id_language) [unique, name: "content_unique_pair"]
  }
}

Table "content_link" {
  "id" serial [pk, not null, increment]
  "id_content_from" integer [not null, ref: < "content"."id"]
  "id_content_to" integer [not null, ref: < "content"."id"]

  Indexes {
    (id_content_from, id_content_to) [unique, name: "content_link_unique_pair"]
  }
}

Table "domain_tag" {
  "id" serial [pk, not null, increment]
  "id_domain" integer [not null, ref: < "domain"."id"]
  "id_tag" integer [not null, ref: < "tag"."id"]

  Indexes {
    (id_domain, id_tag) [unique, name: "domain_tag_unique_pair"]
  }
}

// ------------------------------------------------------------------------
// Area: Asset
// ------------------------------------------------------------------------

Table "asset" {
  "id" serial [pk, not null, increment]
  "id_domain" integer [not null, ref: < "domain"."id"]
  "slug" varchar(64) [not null]
  "path" varchar(4096) [not null]

  Indexes {
    (id_domain, slug) [unique, name: "asset_unique_domain_slug"]
    (path) [unique, name: "asset_path_unique"]
  }
}

Table "asset_information" {
  "id" serial [pk, not null, increment]
  "id_asset" integer [not null, ref: < "asset"."id"]
  "id_language" integer [not null, ref: < "language"."id"]
  "name" varchar(128) [not null]
  "description" text [not null]

  Indexes {
    (id_asset, id_language) [unique, name: "asset_information_unique_pair"]
  }
}

// ------------------------------------------------------------------------
// Area: Language
// ------------------------------------------------------------------------

Table "language" {
  "id" serial [pk, not null, increment]
  "id_asset" integer [not null, unique, ref: < "asset"."id"]
  "slug" varchar(5) [not null]

  Indexes {
    (slug) [unique, name: "language_unique_slug"]
  }
}

Table "language_information" {
  "id" serial [pk, not null, increment]
  "id_language_for" integer [not null, ref: < "language"."id"]
  "id_language_from" integer [not null, ref: < "language"."id"]
  "name" varchar(64) [not null]
  "description" text [not null]

  Indexes {
    (id_language_for, id_language_from) [unique, name: "language_information_unique_pair"]
  }
}

// ------------------------------------------------------------------------
// Area: Tag
// ------------------------------------------------------------------------

Table "tag" {
  "id" serial [pk, not null, increment]
  "id_asset" integer [ref: < "asset"."id"]
  "slug" varchar(64) [not null]

  Indexes {
    (slug) [unique, name: "tag_unique_slug"]
  }
}

Table "tag_requirement" {
  "id" serial [pk, not null, increment]
  "id_tag" integer [not null, ref: < "tag"."id"]
  "id_tag_for" integer [not null, ref: < "tag"."id"]

  Indexes {
    (id_tag, id_tag_for) [unique, name: "tag_requirement_unique_pair"]
  }
}

Table "tag_information" {
  "id" serial [pk, not null, increment]
  "id_tag" integer [not null, ref: < "tag"."id"]
  "id_language" integer [not null, ref: < "language"."id"]
  "name" varchar(128) [not null]
  "description" text [not null]

  Indexes {
    (id_tag, id_language) [unique, name: "tag_information_unique_pair"]
  }
}

// ------------------------------------------------------------------------
// Area: Author
// ------------------------------------------------------------------------

Table "author" {
  "id" serial [pk, not null, increment]
  "id_asset" integer [ref: < "asset"."id"]
  "email" varchar(256) [not null]
  "name" varchar(256) [not null]
  "password" varchar(512) [not null]

  Indexes {
    (email) [unique]
  }
}

Table "author_connection" {
  "id" serial [pk, not null, increment]
  "id_author" integer [not null, ref: < "author"."id"]
  "device" varchar(256) [not null]
  "token" varchar(512) [not null]
  "logged_at" timestamp [not null]
  "last_active_at" timestamp [not null]

  Indexes {
    (token) [unique]
  }
}

Table "author_refresh_connection" {
  "id" serial [pk, not null, increment]
  "id_author" integer [not null, ref: < "author"."id"]
  "device" varchar(256) [not null]
  "token" varchar(512) [not null]
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null]
  "updated_at" timestamp [not null]

  Indexes {
    (token) [unique]
    (id_author, device) [unique, name: "author_refresh_connection_author_device_unique"]
    (expires_at) [name: "author_refresh_connection_expires_at_index"]
  }
}

Table "author_domain" {
  "id" serial [pk, not null, increment]
  "id_author" integer [not null, ref: < "author"."id"]
  "id_domain" integer [not null, ref: < "domain"."id"]
  "granted_at" timestamp [not null]

  Indexes {
    (id_author, id_domain) [unique, name: "author_domain_unique_pair"]
  }
}

Table "author_content" {
  "id" serial [pk, not null, increment]
  "id_author" integer [not null, ref: < "author"."id"]
  "id_content" integer [not null, ref: < "content"."id"]
  "granted_at" timestamp [not null]

  Indexes {
    (id_author, id_content) [unique, name: "author_content_unique_pair"]
  }
}

// ------------------------------------------------------------------------
// Area: Garden
// ------------------------------------------------------------------------

Table "garden" {
  "id" boolean [pk, not null, default: true]
  "id_domain" integer [not null, unique, ref: < "domain"."id"]
  "id_asset" integer [not null, ref: < "asset"."id"]
  "id_author" integer [not null, ref: < "author"."id"]
}

Table "garden_information" {
  "id" serial [pk, not null, increment]
  "id_language" integer [not null, ref: < "language"."id"]
  "name" varchar(64) [not null]
  "description" text [not null]

  Indexes {
    (id_language) [unique, name: "garden_information_unique_language"]
  }
}

// ------------------------------------------------------------------------
// Area: Module
// ------------------------------------------------------------------------

Table "module" {
  "id" serial [pk, not null, increment]
  "repository" varchar(512) [not null]
  "commit" varchar(40) [not null]
  "branch" varchar(256) [not null]
  "version_major" integer
  "version_minor" integer
  "version_patch" integer
  "last_heartbeat" timestamp [not null]
  "enabled" boolean [not null]

  Indexes {
    (repository) [unique]
  }
}
